--- a/config/jei/world/local/New_World/bookmarks.ini
+++ b/config/jei/world/local/New_World/bookmarks.ini
@@ -1,3 +1,1 @@
-T:{Count:1b,id:"alexscaves:cave_codex",tag:{CaveBiome:"alexscaves:magnetic_caves"}}
-T:{Count:1b,id:"buildcraftcore:engine_stone"}
-T:{Count:1b,id:"alexscaves:spelunkery_table"}
+T:{Count:1b,id:"actuallyadditions:wood_casing"}
