--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -122,7 +122,6 @@ Redstone Arsenal
 Rustic Delight
 Woot Revived
 Chickens
-Resourceful Lootbags
 Botanic Additions
 Dust and Ash
 Farming for Blockheads
@@ -138,4 +137,7 @@ Dank Storage
 StevesCarts2
 More Delight
 Tinkers' Thinking
+MythicBotany
+Time In A Bottle
+Resourceful Lootbags
 Structure Gel API
