--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -167,7 +167,6 @@ buildcraftfactory:category_heatable
 buildcraftsilicon:assembly
 buildcraftsilicon:integration
 buildcraftsilicon:programming
-lychee:block_interacting/minecraft/default
 treetap:tap_extract
 mysticalagriculture:awakening
 mysticalagriculture:crux
@@ -180,12 +179,10 @@ cobblegenrandomizer:basalt_gen
 cobblegenrandomizer:cobble_gen
 cobblegenrandomizer:custom_gen
 cobblegenrandomizer:stone_gen
-lychee:block_crushing/minecraft/default
 architects_palette:warping
 farmersdelight:cooking
 farmersdelight:cutting
 farmersdelight:decomposition
-lychee:item_burning/minecraft/default
 reliquary:alkahestry_charging
 reliquary:alkahestry_crafting
 reliquary:cauldron
@@ -310,7 +307,6 @@ jeresources:mob
 jeresources:plant
 jeresources:villager
 jeresources:worldgen
-lychee:item_inside/minecraft/default
 fluxnetworks:creating_flux
 hexerei:add_to_candle
 hexerei:blood_sigil
@@ -363,3 +359,5 @@ tconstruct:part_builder
 tconstruct:severing
 tconstruct:tool_recipes
 tconstruct:worktable
+mythicbotany:infuser
+mythicbotany:rune_ritual
