Farmer's Market Fix + Arboreal Extractor
- Added a tooltip for the Farmer’s Market
- Modded Seeds can now be found in the Farmer’s Market
- Changed Arboreal Extractor Recipe
- Bronze Plate recipe
- Crushing Hammer has a recipe
- Disabled Gear Casts and Plate Casts

--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -361,3 +361,8 @@ tconstruct:tool_recipes
 tconstruct:worktable
 mythicbotany:infuser
 mythicbotany:rune_ritual
+justenoughprofessions:professions
+lychee:block_crushing/minecraft/default
+lychee:block_interacting/minecraft/default
+lychee:item_burning/minecraft/default
+lychee:item_inside/minecraft/default
