Rework Ch 1 recipes / Compass / Alex Caves / summoning altar

--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -148,4 +148,8 @@ Sanguine Neural Networks
 Starbunclemania
 Tom's Simple Storage Mod
 manavisualizer
+Forbidden & Arcanus
+Explorer's Compass
+Lemoned
+Tinkers' Advanced
 Structure Gel API
