--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -379,3 +379,6 @@ hostilenetworks:sim_chamber
 sanguine_networks:virtual_sacrificer/catalyst
 sanguine_networks:virtual_sacrificer/recipe
 starbunclemania:fluid_sourcelink
+forbidden_arcanus:clibano_combustion
+forbidden_arcanus:hephaestus_forge_upgrading
+forbidden_arcanus:hephaestus_smithing
