--- a/config/jei/world/local/New_World/bookmarks.ini
+++ b/config/jei/world/local/New_World/bookmarks.ini
@@ -1,1 +1,4 @@
-T:{Count:1b,id:"integratedterminals:part_terminal_storage"}
+T:{Count:1b,id:"sfm:form",tag:{reference:{Count:1b,id:"minecraft:filled_map"}}}
+T:{Count:1b,id:"kubejs:lapis_plate"}
+T:{Count:1b,id:"kubejs:obsidian_plate"}
+T:{Count:1b,id:"kubejs:wood_sheet"}
