--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -287,7 +287,6 @@ powah:energizing
 powah:heat_source
 powah:magmatic
 powah:solid_coolant
-kubejs:cauldron_crafting
 alchemistry:atomizer
 alchemistry:combiner
 alchemistry:compactor
@@ -346,7 +345,6 @@ chipped:glassblower
 chipped:loom_table
 chipped:mason_table
 chipped:tinkering_table
-kubejs:ore_gen
 tconstruct:alloy
 tconstruct:casting_basin
 tconstruct:casting_table
@@ -382,3 +380,4 @@ starbunclemania:fluid_sourcelink
 forbidden_arcanus:clibano_combustion
 forbidden_arcanus:hephaestus_forge_upgrading
 forbidden_arcanus:hephaestus_smithing
+nuclearcraft:msr_controller
