--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -138,7 +138,6 @@ More Delight
 Tinkers' Thinking
 MythicBotany
 Time In A Bottle
-Resourceful Lootbags
 Spice of Life: Carrot Edition
 Ars Nouveau
 Hostile Neural Networks
@@ -151,3 +150,5 @@ Forbidden & Arcanus
 Explorer's Compass
 Lemoned
 Tinkers' Advanced
+Resourceful Lootbags
+Structure Gel API
