Multi Almost Done

--- a/config/jei/ingredient-list-type-sort-order.ini
+++ b/config/jei/ingredient-list-type-sort-order.ini
@@ -12,3 +12,5 @@ slimeknights.mantle.recipe.ingredient.EntityIngredient$EntityInput
 slimeknights.tconstruct.library.modifiers.ModifierEntry
 slimeknights.tconstruct.library.recipe.partbuilder.Pattern
 slimeknights.tconstruct.library.tools.SlotType$SlotCount
+fr.frinn.custommachinery.impl.integration.jei.Energy
+fr.frinn.custommachinery.impl.integration.jei.Experience
