Artisan Worktable Early Implementation

--- a/config/jei/ingredient-list-type-sort-order.ini
+++ b/config/jei/ingredient-list-type-sort-order.ini
@@ -14,3 +14,4 @@ slimeknights.tconstruct.library.recipe.partbuilder.Pattern
 slimeknights.tconstruct.library.tools.SlotType$SlotCount
 fr.frinn.custommachinery.impl.integration.jei.Energy
 fr.frinn.custommachinery.impl.integration.jei.Experience
+com.agricraft.agricraft.api.plant.AgriPlant
