--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -412,5 +412,8 @@ advanced_ae:reaction_chamber
 expatternprovider:circuit_cutter
 the_bumblezone:queen_color_randomizer_trades
 the_bumblezone:queen_trades
-mbd2:strainer
-mbd2:ember_oven
+agricraft:jei/clipping
+agricraft:jei/mutation
+agricraft:jei/produce
+agricraft:jei/requirement
+kubejs:artistan_worktable
