--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -424,3 +424,21 @@ kubejs:drying_rack
 ftbquests:loot_crate
 ftbquests:quest
 ceramics:kiln
+gendustry:dna_extractor
+gendustry:mutagen_producer
+gendustry:protein_liquefier
+pneumaticcraft:amadron_trade
+pneumaticcraft:assembly
+pneumaticcraft:etching_tank
+pneumaticcraft:explosion_crafting
+pneumaticcraft:fluid_mixer
+pneumaticcraft:heat_frame_cooling
+pneumaticcraft:heat_properties
+pneumaticcraft:memory_essence
+pneumaticcraft:plastic_solidifying
+pneumaticcraft:pressure_chamber
+pneumaticcraft:refinery
+pneumaticcraft:spawner_extraction
+pneumaticcraft:thermo_plant
+pneumaticcraft:uv_light_box
+pneumaticcraft:yeast_crafting
