--- a/config/jei/world/local/New_World__4/bookmarks.ini
+++ b/config/jei/world/local/New_World__4/bookmarks.ini
@@ -1,7 +1,1 @@
-T:{Count:1b,id:"oreberriesreplanted:oak_vat"}
-T:{Count:1b,id:"kubejs:pulp"}
-T:{Count:1b,id:"farmersdelight:rice"}
-T:{Count:1b,id:"rusticdelight:cotton_boll"}
-T:{Count:1b,id:"farmersdelight:tree_bark"}
-T:{Count:1b,id:"minecraft:sugar_cane"}
-T:{Count:1b,id:"ceramics:unfired_clay_bucket"}
+T:{Count:1b,id:"chemlib:aluminum_metal_block"}
