Ch1 is done at 95% + Preparing for Buildcraft Depreciation

--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -76,8 +76,6 @@ RFToolsDimensions
 RFToolsPower
 RFToolsStorage
 RFToolsUtility
-Roots Classic
-RootsClassic+
 Tesseract
 The Twilight Forest
 Hang Glider
@@ -180,4 +178,6 @@ Gendustry
 PNC: Extra PCBs
 PneumaticCraft: Repressurized
 TelePastries
+XNet
+Eidolon:Repraised
 Structure Gel API
