--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -193,8 +193,6 @@ hammerlib:test_machine
 deepresonance:laser
 deepresonance:purifier
 deepresonance:smelter
-rootsclassic:mortar
-rootsclassic:ritual
 twilightforest:crumble_horn
 twilightforest:transformation
 twilightforest:uncrafting
@@ -395,7 +393,6 @@ theurgy:fermentation
 theurgy:incubation
 theurgy:liquefaction
 theurgy:reformation
-kubejs:cauldron_crafting
 advgenerators:exchanger_cooling
 advgenerators:exchanger_heating
 advgenerators:syngas_conversion
@@ -420,7 +417,6 @@ kubejs:artistan_worktable
 oreberriesreplanted:vat_recipe
 salt:salt_crystal_growing
 salt:salt_evaporation
-kubejs:drying_rack
 ftbquests:loot_crate
 ftbquests:quest
 ceramics:kiln
@@ -442,3 +438,7 @@ pneumaticcraft:spawner_extraction
 pneumaticcraft:thermo_plant
 pneumaticcraft:uv_light_box
 pneumaticcraft:yeast_crafting
+eidolon:crucible
+eidolon:rituals
+eidolon:worktable
+minecraft:cauldron_crafting
