--- a/config/jei/world/local/New_World/bookmarks.ini
+++ b/config/jei/world/local/New_World/bookmarks.ini
@@ -1,5 +1,6 @@
-T:{Count:1b,id:"sfm:form",tag:{reference:{Count:1b,id:"minecraft:filled_map"}}}
-T:{Count:1b,id:"kubejs:lapis_plate"}
-T:{Count:1b,id:"kubejs:obsidian_plate"}
-T:{Count:1b,id:"kubejs:wood_sheet"}
-T:{Count:1b,id:"toms_storage:ts.storage_terminal"}
+T:{Count:1b,id:"thermal_extra:copper_rod"}
+T:{Count:1b,id:"kubejs:aluminum_plate"}
+T:{Count:1b,id:"projectred_exploration:electrotine_block"}
+T:{Count:1b,id:"kubejs:scanner_battery"}
+T:{Count:1b,id:"tconstruct:sky_slime_crystal"}
+T:{Count:1b,id:"scannable:scanner",tag:{energy:5000}}
