--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -172,4 +172,15 @@ PneumaticCraft: Repressurized
 TelePastries
 XNet
 Eidolon:Repraised
+My Nether's Delight
+BotanyPots
+EnderStorage
+NaturesAura
+Tempad
+Extreme Reactors
+Zero CORE 2
+Aquaculture 2
+Glassential Renewed
+Fluffy Fur
+Wizard's Reborn
 Structure Gel API
