--- a/config/jei/ingredient-list-type-sort-order.ini
+++ b/config/jei/ingredient-list-type-sort-order.ini
@@ -15,3 +15,6 @@ slimeknights.tconstruct.library.tools.SlotType$SlotCount
 fr.frinn.custommachinery.impl.integration.jei.Energy
 fr.frinn.custommachinery.impl.integration.jei.Experience
 com.agricraft.agricraft.api.plant.AgriPlant
+it.zerono.mods.extremereactors.api.coolant.Coolant
+it.zerono.mods.extremereactors.api.coolant.Vapor
+it.zerono.mods.extremereactors.api.reactor.Reactant
