--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -435,3 +435,32 @@ eidolon:crucible
 eidolon:rituals
 eidolon:worktable
 minecraft:cauldron_crafting
+mynethersdelight:forgoting
+botanypots:crop
+botanypots:soil
+naturesaura:altar
+naturesaura:animal_spawner
+naturesaura:offering
+naturesaura:tree_ritual
+bigreactors:fluidizer_fluidmixing
+bigreactors:fluidizer_solid
+bigreactors:fluidizer_solidmixing
+bigreactors:jei_condensations
+bigreactors:jei_coolantsmappings
+bigreactors:jei_reactantsmappings_fluid
+bigreactors:jei_reactantsmappings_solid
+bigreactors:jei_vaporizations
+bigreactors:jei_vaporsmappings
+bigreactors:reactantsreactions
+bigreactors:reprocessor
+wizards_reborn:alchemy_machine
+wizards_reborn:arcane_iterator
+wizards_reborn:arcane_workbench
+wizards_reborn:arcanum_dust_transmutation
+wizards_reborn:censer
+wizards_reborn:crystal_infusion
+wizards_reborn:crystal_ritual
+wizards_reborn:jeweler_table
+wizards_reborn:mortar
+wizards_reborn:wissen_altar
+wizards_reborn:wissen_crystallizer
