--- a/config/jei/world/local/New_World/bookmarks.ini
+++ b/config/jei/world/local/New_World/bookmarks.ini
@@ -1,6 +1,2 @@
-T:{Count:1b,id:"thermal_extra:copper_rod"}
-T:{Count:1b,id:"kubejs:aluminum_plate"}
-T:{Count:1b,id:"projectred_exploration:electrotine_block"}
-T:{Count:1b,id:"kubejs:scanner_battery"}
-T:{Count:1b,id:"tconstruct:sky_slime_crystal"}
-T:{Count:1b,id:"scannable:scanner",tag:{energy:5000}}
+T:{Count:1b,id:"extendedcrafting:frame"}
+T:{Count:1b,id:"thermal:device_tree_extractor"}
