--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -29,7 +29,6 @@ ProjectRed Fabrication
 ProjectRed Illumination
 ProjectRed Integration
 ProjectRed Transmission
-Re-Avaritia-forged
 Solar Craft
 Sophisticated Backpacks
 Sophisticated Core
@@ -185,4 +184,9 @@ Building Gadgets 2
 Construction Wand
 Infused Crystals
 Dense Ores
+Tinker in Caves
+Artifacts
+Relics
+NaturesAura
+Re-Avaritia
 Structure Gel API
