--- a/config/etstlib-common.toml
+++ b/config/etstlib-common.toml
@@ -3,4 +3,8 @@
 ["常规"]
 	#是否允许EntityTicker作用于玩家，由于可能导致问题所以默认false
 	allow_entity_ticker_on_player = false
+	#是否允许一般的工具在被合成时拥有UUID，暂时默认是，后续版本可能会改为否
+	allow_common_tool_having_uuid = true
+	#是否允许一般的可堆叠工具在被合成时拥有UUID，默认否（仅在allow_common_tool_having_uuid=true时有效）
+	allow_stackable_tool_having_uuid = false
 
