--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -450,3 +450,7 @@ bigreactors:jei_vaporsmappings
 bigreactors:reactantsreactions
 bigreactors:reprocessor
 mbd2:super_extractor
+naturesaura:altar
+naturesaura:animal_spawner
+naturesaura:offering
+naturesaura:tree_ritual
