like 2 weeks of progress idk

--- a/config/agricraft.jsonc
+++ b/config/agricraft.jsonc
@@ -127,6 +127,10 @@
         // Set to false to disable compatibility with Botania (in case things break)
         "botania": true,
         // Set to false to disable compatibility with Mystical Agriculture (in case things break)
-        "mysticalagriculture": true
+        "mysticalagriculture": true,
+        // If true, harvesting drones will be able to harvest AgriCraft crops
+        "pneumaticcraft": true,
+        // If set to true, plant gatherer will be able to harvest AgriCraft crops
+        "industrialforegoing": true
     }
 }
