--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -70,7 +70,6 @@ RFToolsUtility
 Tesseract
 The Twilight Forest
 Hang Glider
-Void Miners
 Trials Chambers
 Pale Garden Backport
 Draconic Evolution
@@ -189,4 +188,7 @@ Artifacts
 Relics
 NaturesAura
 Re-Avaritia
+Dimensions of Alex's Caves
+VoidMiners Reforged
+Apotheosis
 Structure Gel API
