--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -189,15 +189,6 @@ deepresonance:smelter
 twilightforest:crumble_horn
 twilightforest:transformation
 twilightforest:uncrafting
-voidminers:miner/tier1_miner
-voidminers:miner/tier2_miner
-voidminers:miner/tier3_miner
-voidminers:miner/tier4_miner
-voidminers:miner/tier5_miner
-voidminers:miner/tier6_miner
-voidminers:miner/tier7_miner
-voidminers:miner/tier8_miner
-voidminers:miner/tier9_miner
 draconicevolution:fusion_crafting
 functionalstorage:dissolution
 waystones:warp_plate
@@ -318,7 +309,6 @@ woot_revived:enchanted_liquifier
 woot_revived:fluid_infuser
 woot_revived:item_infuser
 woot_revived:stygian_anvil
-quark:influence
 chickens:breeding
 chickens:drops
 chickens:laying
@@ -454,3 +444,13 @@ naturesaura:altar
 naturesaura:animal_spawner
 naturesaura:offering
 naturesaura:tree_ritual
+voidminers_reforged:miner/tier1_miner
+voidminers_reforged:miner/tier2_miner
+voidminers_reforged:miner/tier3_miner
+voidminers_reforged:miner/tier4_miner
+voidminers_reforged:miner/tier5_miner
+voidminers_reforged:miner/tier6_miner
+voidminers_reforged:miner/tier7_miner
+voidminers_reforged:miner/tier8_miner
+voidminers_reforged:miner/tier9_miner
+apotheosis:enchanting
