--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -112,7 +112,6 @@ Industrial Foregoing: Woot Addon
 Chipped
 Chisel
 Comforts
-Reinforced Crate
 Torchmaster
 XTones Reworked
 Tinkers' Construct
@@ -128,13 +127,11 @@ Hostile Neural Networks
 Mana Liquidizer
 Sanguine Neural Networks
 Starbunclemania
-Tom's Simple Storage Mod
 manavisualizer
 Forbidden & Arcanus
 Explorer's Compass
 Lemoned
 Tinkers' Advanced
-Resourceful Lootbags
 Lootr
 Malum
 Mob Lassos
@@ -191,4 +188,10 @@ Re-Avaritia
 Dimensions of Alex's Caves
 VoidMiners Reforged
 Apotheosis
-Structure Gel API
+ME-Beam-Former
+Resourceful Lootbags
+Compact Crafting
+Chisel Modern
+Wooden Bucket
+Animus
+Deeper and Darker
