--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -340,7 +340,6 @@ tconstruct:worktable
 mythicbotany:infuser
 mythicbotany:rune_ritual
 justenoughprofessions:professions
-lychee:block_crushing/minecraft/default
 lychee:block_interacting/minecraft/default
 lychee:item_burning/minecraft/default
 lychee:item_inside/minecraft/default
@@ -454,3 +453,6 @@ voidminers_reforged:miner/tier7_miner
 voidminers_reforged:miner/tier8_miner
 voidminers_reforged:miner/tier9_miner
 apotheosis:enchanting
+lychee:block_crushing/minecraft/default
+compactcrafting:miniaturization
+chisel:chiseling
