Aquaculture / Watercollector removal

--- a/config/ProjectRed.cfg
+++ b/config/ProjectRed.cfg
@@ -54,7 +54,7 @@
 
 	B:"electrotine_ore"=true
 
-	B:"marble_cave"=true
+	B:"marble_cave"=false
 }
 
 # Control the loading of various compatibility hooks. These settings are ignored unless the Compatibility module is installed.
