--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -78,7 +78,6 @@ Functional Storage
 Gravestone Mod
 Traverse Reforged
 Waystones
-Giacomo's Experience Seedling Mod
 Trash Cans
 Mana and Artifice
 Tropicraft
@@ -130,7 +129,6 @@ Starbunclemania
 manavisualizer
 Forbidden & Arcanus
 Explorer's Compass
-Lemoned
 Tinkers' Advanced
 Lootr
 Malum
@@ -144,7 +142,6 @@ PackagedAuto
 PackagedExCrafting
 PackagedExExCrafting
 AE2WTLib
-Ad Astra: Star
 Advanced AE
 Applied Botanics
 Environmental
@@ -153,13 +150,11 @@ Jaden's Nether Expansion
 The Bumblezone
 Schematicannon
 Custom Machinery
-AgriCraft
 Mystical Agradditions
 Project: Vibrant Journeys
 Oreberries Replanted
 Salt
 FTB Filter System
-Ceramics
 End's Phantasm
 Gendustry
 PNC: Extra PCBs
@@ -190,8 +185,13 @@ VoidMiners Reforged
 Apotheosis
 ME-Beam-Former
 Resourceful Lootbags
-Compact Crafting
 Chisel Modern
 Wooden Bucket
 Animus
 Deeper and Darker
+Immersive Engineering
+Immersive Petroleum
+Clayworks
+Buzzier Bees
+Wireless Redstone
+Tom's Simple Storage Mod
