--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -391,17 +391,12 @@ advanced_ae:reaction_chamber
 expatternprovider:circuit_cutter
 the_bumblezone:queen_color_randomizer_trades
 the_bumblezone:queen_trades
-agricraft:jei/clipping
-agricraft:jei/mutation
-agricraft:jei/produce
-agricraft:jei/requirement
 kubejs:artistan_worktable
 oreberriesreplanted:vat_recipe
 salt:salt_crystal_growing
 salt:salt_evaporation
 ftbquests:loot_crate
 ftbquests:quest
-ceramics:kiln
 gendustry:dna_extractor
 gendustry:mutagen_producer
 gendustry:protein_liquefier
@@ -454,5 +449,27 @@ voidminers_reforged:miner/tier8_miner
 voidminers_reforged:miner/tier9_miner
 apotheosis:enchanting
 lychee:block_crushing/minecraft/default
-compactcrafting:miniaturization
 chisel:chiseling
+immersiveengineering:alloy
+immersiveengineering:arc_furnace
+immersiveengineering:arc_recycling
+immersiveengineering:blast_furnace
+immersiveengineering:blast_furnace_fuel
+immersiveengineering:blueprint
+immersiveengineering:bottling_machine
+immersiveengineering:cloche
+immersiveengineering:coke_oven
+immersiveengineering:crusher
+immersiveengineering:fermenter
+immersiveengineering:fertilizer
+immersiveengineering:metal_press
+immersiveengineering:mixer
+immersiveengineering:refinery
+immersiveengineering:sawmill
+immersiveengineering:squeezer
+immersivepetroleum:cokerunit
+immersivepetroleum:distillation
+immersivepetroleum:hydrotreater
+jeimultiblocks:multiblock
+clayworks:baking
+animus:imperfect_ritual
