--- a/config/experienceobelisk-common.toml
+++ b/config/experienceobelisk-common.toml
@@ -106,3 +106,8 @@
 	#Whether Agar blocks are permeable to Forgotten Dust item entities. Default = false
 	ShelvesPermeableToDust = false
 
+["Cognitive Bow"]
+	#Whether to show the projectile velocity & accuracy boost in the tooltip. Default = true
+	#Disable this if tooltip components are being displayed in the wrong order.
+	Show = true
+
