--- a/config/jei/world/local/New_World/bookmarks.ini
+++ b/config/jei/world/local/New_World/bookmarks.ini
@@ -1,3 +1,3 @@
-T:{Count:1b,id:"thermal_extra:sticky_ball"}
-T:{Count:1b,id:"kubejs:cardboard_chunk"}
-T:{Count:1b,id:"forestry:impregnated_stick"}
+T:{Count:1b,id:"toms_storage:ts.storage_terminal"}
+T:{Count:1b,id:"toms_storage:ts.inventory_cable"}
+T:{Count:1b,id:"sophisticatedstorage:controller"}
